--- a/VQGAN+CLIP(Updated)_sample.ipynb
+++ b/VQGAN+CLIP(Updated)_sample.ipynb
@@ -37,12 +37,44 @@
       "source": [
         "# Generate images from text phrases with VQGAN and CLIP (z + quantize method with augmentations).\n",
         "\n",
-        "Notebook by Katherine Crowson (https://github.com/crowsonkb, https://twitter.com/RiversHaveWings). The original BigGAN + CLIP method was made by https://twitter.com/advadnoun. Translated and added explanations, and modifications by Eleiber # 8347, and the friendly interface was made thanks to Abulafia # 3734.\n",
+        "Notebook taken and edited from Katherine Crowson (https://github.com/crowsonkb, https://twitter.com/RiversHaveWings). The original BigGAN + CLIP method was made by https://twitter.com/advadnoun. Translated and added explanations, and modifications by Eleiber # 8347, and the friendly interface was made thanks to Abulafia # 3734.\n",
+        "\n",
         "\n",
         "For a detailed tutorial on how to use it, I recommend [visit this article] (https://yourcriatures.miraheze.org/wiki/Help:Create_images_with_VQGAN+CLIP), made by Jakeukalane # 2767 and Avengium (Angel) # 3715\n",
         "\n",
-        "Modified by: Justin John\n"
+        "Modified by: Abhilash Majumder\n"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##Architecture of VQGANs\n",
+        "\n",
+        "<img src=\"https://miro.medium.com/v2/resize:fit:828/format:webp/1*GrprzwM_atFsrinwuJh8ww.png\">\n",
+        "\n",
+        "The architecture of Vector Quantized Generative Adversarial Networks (VQ-GAN) is an extension of VQ-VAE and is resumed in the figure below.\n",
+        "\n",
+        "<img src=\"https://miro.medium.com/v2/resize:fit:1400/format:webp/1*JOrCybe84dKUvgiVNe0TaA.png\">\n",
+        "\n",
+        "The main idea is that, to utilize the computationally costly self-attention operation in high-resolution synthesis, the images have to be in some way expressed as sequences. Instead of using pixels or patches as tokens, the encoder extracts an encoding Z_hat which is then quantized to Z_q using the closest codebook entry . The decoder can then reconstruct the image starting from the quantization. This part of training, needed to learn the codebook representation, is almost identical to the VQ-VAE one, with two main differences in the loss used. Indeed, as already said at the end of the last section, the loss used in VQ-VAE was composed of three terms, the MSE plus the two alignment losses. Here, the MSE is substituted by perceptual loss, which is basically the MSE computed not on two images, but on some internal representations of the images. For example, two images are passed through a CNN, and the n-th layer features are extracted and compared with MSE. In addition, they add an adversarial loss (the typical loss used in GANs, where a generator and a discriminator compete in a minimax game) to solve VQ-VAE blurring problem, with a prediction real/fake not for the entire image but for single patches.\n",
+        "After this phase, the network has learned the codebook, and it is now able to produce Z_q given an image, which is passed to the decoder to reconstruct the original image.\n",
+        "\n",
+        "<img src=\"https://miro.medium.com/v2/resize:fit:1400/format:webp/1*GoNfV6jrgMKkWe_E7t8RLQ.png\">\n",
+        "\n",
+        "\n",
+        "### Summary\n",
+        "\n",
+        "At this point, we now have all the ingredients needed to discuss VQGAN’s architecture:\n",
+        "\n",
+        "- A convolutional neural network that takes a set of images to learn their visual parts. By taking advantage of a pixel’s local interactions, we can learn high-level features to construct new imagery.\n",
+        "- A transformer network that takes a sequence to learn their long-range interactions. Given a discrete representation, a transformer allows us to understand relationships across visual parts.\n",
+        "- A codebook obtained via vector quantization. It consists of discrete codewords that allows us to easily train a transformer on top of it.\n",
+        "\n",
+        "<img src=\"https://ljvmiranda921.github.io/assets/png/vqgan/two_stage_v2.png\">"
+      ],
+      "metadata": {
+        "id": "zfMvBpW8IRYK"
+      }
     },
     {
       "cell_type": "code",
@@ -310,6 +342,28 @@
         "    input = input.view([n, c, h, w])\n",
         "    return F.interpolate(input, size, mode='bicubic', align_corners=align_corners)\n",
         " \n",
+        "def custom_unshuffle(input, size, align_corners=True):\n",
+        "    n, c, h, w = input.shape\n",
+        "    dh, dw = size\n",
+        "    beta =2\n",
+        "    input = input.view([n * c, 1, h, w])\n",
+        " \n",
+        "    if dh < h:\n",
+        "        kernel_h = lanczos(ramp(dh / h, 2), 2).to(input.device, input.dtype)\n",
+        "        pad_h = (kernel_h.shape[0] - 1) // 2\n",
+        "        input = F.pad(input, (0, 0, pad_h, pad_h), 'reflect')\n",
+        "        input = F.conv2d(input, kernel_h[None, None, :, None])\n",
+        "        input = torch.nn.PixelUnshuffle(beta)(input)\n",
+        " \n",
+        "    if dw < w:\n",
+        "        kernel_w = lanczos(ramp(dw / w, 2), 2).to(input.device, input.dtype)\n",
+        "        pad_w = (kernel_w.shape[0] - 1) // 2\n",
+        "        input = F.pad(input, (pad_w, pad_w, 0, 0), 'reflect')\n",
+        "        input = F.conv2d(input, kernel_w[None, None, None, :])\n",
+        " \n",
+        "    input = input.view([n, c, h, w])\n",
+        "    return F.interpolate(input, size, mode='bicubic', align_corners=align_corners)\n",
+        " \n",
         " \n",
         "class ReplaceGrad(torch.autograd.Function):\n",
         "    @staticmethod\n",
@@ -378,7 +432,7 @@
         "        self.cut_pow = cut_pow\n",
         "        self.augs = nn.Sequential(\n",
         "            K.RandomHorizontalFlip(p=0.5),\n",
-        "            # K.RandomSolarize(0.01, 0.01, p=0.7),\n",
+        "            K.RandomSolarize(0.01, 0.01, p=0.7),\n",
         "            K.RandomSharpness(0.3,p=0.4),\n",
         "            K.RandomAffine(degrees=30, translate=0.1, p=0.8, padding_mode='border'),\n",
         "            K.RandomPerspective(0.2,p=0.4),\n",
